[package]
name        = "api"
version     = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
description = "Horkos API binary — composes telemetry, ban-engine, license-server routers; owns runtime and tracing."

[[bin]]
name = "horkos-api"
path = "src/main.rs"

[dependencies]
tokio              = { workspace = true }
axum               = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }
http               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

telemetry      = { path = "../telemetry" }
ban-engine     = { path = "../ban-engine" }
license-server = { path = "../license-server" }
