[package]
name        = "attestation-verify"
version     = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
description = "Horkos server-side TPM attestation verifier: parse TPMS_ATTEST, bind the nonce, verify the AK (ECDSA-P256) signature. Pairs with the tpm2-tss client backends."

[lib]
name = "attestation_verify"
path = "src/lib.rs"

[dependencies]
p256      = { workspace = true }
sha2      = { workspace = true }
thiserror = { workspace = true }
