[package]
name        = "ban-engine"
version     = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
description = "Horkos ban engine. Rule cache + signed-bundle deserializer skeleton. Ed25519 verification lands under /tdd in a follow-up phase."

[features]
default = []
# Compiles a placeholder bundle verifier that ALWAYS fails closed unless this
# feature is on. CI rejects this feature on release branches.
# The dev-only placeholder additionally panics in --release builds via a
# compile_error! check so a release artifact cannot accept unverified bundles.
unverified_bundles_dev_only = []

[lib]
name = "ban_engine"
path = "src/lib.rs"

[dependencies]
axum       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
http           = { workspace = true }
http-body-util = { workspace = true }
tokio          = { workspace = true }
tower          = { workspace = true }
